// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`pre renders arrays of children 1`] = `
<pre>
  TEST
  TEST
  TEST
  TEST
  TEST
  TEST
  TEST
  TEST
  TEST
  TEST
</pre>
`;

exports[`pre renders with accessKey="a,b,c,d" 1`] = `
<pre
  accessKey="a,b,c,d"
/>
`;

exports[`pre renders with autoCapitalize="characters" 1`] = `
<pre
  autoCapitalize="characters"
/>
`;

exports[`pre renders with autoCapitalize="none" 1`] = `
<pre
  autoCapitalize="none"
/>
`;

exports[`pre renders with autoCapitalize="off" 1`] = `
<pre
  autoCapitalize="off"
/>
`;

exports[`pre renders with autoCapitalize="on" 1`] = `
<pre
  autoCapitalize="on"
/>
`;

exports[`pre renders with autoCapitalize="sentences" 1`] = `
<pre
  autoCapitalize="sentences"
/>
`;

exports[`pre renders with autoCapitalize="words" 1`] = `
<pre
  autoCapitalize="words"
/>
`;

exports[`pre renders with children 1`] = `
<pre>
  TEST
</pre>
`;

exports[`pre renders with className="foo bar baz" 1`] = `
<pre
  className="foo bar baz"
/>
`;

exports[`pre renders with contentEditable="false" 1`] = `
<pre
  contentEditable="false"
/>
`;

exports[`pre renders with contentEditable="true" 1`] = `
<pre
  contentEditable="true"
/>
`;

exports[`pre renders with dir="auto" 1`] = `
<pre
  dir="auto"
/>
`;

exports[`pre renders with dir="ltr" 1`] = `
<pre
  dir="ltr"
/>
`;

exports[`pre renders with dir="rtl" 1`] = `
<pre
  dir="rtl"
/>
`;

exports[`pre renders with draggable="false" 1`] = `
<pre
  draggable="false"
/>
`;

exports[`pre renders with draggable="true" 1`] = `
<pre
  draggable="true"
/>
`;

exports[`pre renders with empty attributes 1`] = `<pre />`;

exports[`pre renders with hidden=false 1`] = `
<pre
  hidden={false}
/>
`;

exports[`pre renders with hidden=true 1`] = `
<pre
  hidden={true}
/>
`;

exports[`pre renders with id="TEST" 1`] = `
<pre
  id="TEST"
/>
`;

exports[`pre renders with inputMode="decimal" 1`] = `
<pre
  inputMode="decimal"
/>
`;

exports[`pre renders with inputMode="email" 1`] = `
<pre
  inputMode="email"
/>
`;

exports[`pre renders with inputMode="none" 1`] = `
<pre
  inputMode="none"
/>
`;

exports[`pre renders with inputMode="numeric" 1`] = `
<pre
  inputMode="numeric"
/>
`;

exports[`pre renders with inputMode="search" 1`] = `
<pre
  inputMode="search"
/>
`;

exports[`pre renders with inputMode="tel" 1`] = `
<pre
  inputMode="tel"
/>
`;

exports[`pre renders with inputMode="text" 1`] = `
<pre
  inputMode="text"
/>
`;

exports[`pre renders with inputMode="url" 1`] = `
<pre
  inputMode="url"
/>
`;

exports[`pre renders with is="foo" 1`] = `
<pre
  is="foo"
/>
`;

exports[`pre renders with itemID="https://google.com/" 1`] = `
<pre
  itemID="https://google.com/"
/>
`;

exports[`pre renders with itemProp="https://google.com/" 1`] = `
<pre
  itemProp="https://google.com/"
/>
`;

exports[`pre renders with itemRef="foo bar" 1`] = `
<pre
  itemRef="foo bar"
/>
`;

exports[`pre renders with itemScope=false 1`] = `
<pre
  itemScope={false}
/>
`;

exports[`pre renders with itemScope=true 1`] = `
<pre
  itemScope={true}
/>
`;

exports[`pre renders with itemType="https://google.com/" 1`] = `
<pre
  itemType="https://google.com/"
/>
`;

exports[`pre renders with lang="" 1`] = `
<pre
  lang=""
/>
`;

exports[`pre renders with lang="es-419" 1`] = `
<pre
  lang="es-419"
/>
`;

exports[`pre renders with slot="TEST" 1`] = `
<pre
  slot="TEST"
/>
`;

exports[`pre renders with spellCheck="false" 1`] = `
<pre
  spellCheck="false"
/>
`;

exports[`pre renders with spellCheck="true" 1`] = `
<pre
  spellCheck="true"
/>
`;

exports[`pre renders with style={"color":"#000000"} 1`] = `
<pre
  style={
    Object {
      "color": "#000000",
    }
  }
/>
`;

exports[`pre renders with tabIndex=1 1`] = `
<pre
  tabIndex={1}
/>
`;

exports[`pre renders with title="TEST" 1`] = `
<pre
  title="TEST"
/>
`;

exports[`pre renders with translate="no" 1`] = `
<pre
  translate="no"
/>
`;

exports[`pre renders with translate="yes" 1`] = `
<pre
  translate="yes"
/>
`;

exports[`pre renders without attributes 1`] = `<pre />`;
